--- a/index.html
+++ b/index.html
@@ -15,6 +15,32 @@
       margin: 0;
       background: #fff;
     }
+     #preloader {
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background-color: #e91e63; /* Pink background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    transition: opacity 0.5s ease;
+  }
+  #preloader.hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
+  .spinner {
+    border: 6px solid #fce4ec; /* Light pink */
+    border-top: 6px solid white; /* White spinner */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+  }
+  @keyframes spin {
+    0%   { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 
     /* Navbar Styles */
     .navbar {
@@ -465,10 +491,14 @@
 </head>
 <body>
 
+   <!-- Preloader -->
+<div id="preloader">
+  <div class="spinner"></div>
+</div>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" role="navigation" aria-label="Main navigation">
     <div class="container">
-      <a class="navbar-brand" href="#home" tabindex="1">She</a>
+      <a class="navbar-brand" href="#home" tabindex="1">She-Ride</a>
 
       <!-- Default toggler hidden on mobile -->
       <button
@@ -519,7 +549,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active" aria-hidden="false" tabindex="-1">
         <img
-          src="./image/women1.jpg"
+          src="women1.jpg"
           alt="Female bike riding with passenger"
           draggable="false"
           loading="lazy"
@@ -895,6 +925,14 @@
         downloadBtn.focus();
       }
     });
+    window.addEventListener('load', () => {
+    const preloader = document.getElementById('preloader');
+    preloader.classList.add('hidden');
+    // Optionally remove from DOM after fade out:
+    setTimeout(() => preloader.style.display = 'none', 500);
+  });
   </script>
+
 </body>
+
 </html>
