--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 <!-- Hero Section -->
 <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="8000" data-bs-touch="false">
   <div class="carousel-inner">
-    <div class="carousel-item active" style="background-image: url('./image/women1.jpg');">
+    <div class="carousel-item active" style="background-image: url('women1.jpg');">
       <div class="carousel-caption" data-aos="fade-up" data-aos-delay="300">
         <h1>Ride with Freedom</h1>
         <p>Experience the joy of riding across Pakistan.</p>
@@ -622,3 +622,4 @@
 
 </body>
 </html>
+
